--- a/C05_prediction.qmd
+++ b/C05_prediction.qmd
@@ -5,7 +5,7 @@ title: "Prediction"
 > It's tough to make predictions, especially about the future.
 > ~ Yogi Berra
 
-Finally we come to the end product of forecasting: the prediction. This last step is actually fairly simple, given a recipe and model (now bundled in a `workflow` container).  We have already made predictions using tables of input covariates, but we now want to predict across the entire domain of our Brickman data set.  This requires predicting with `stars` objects not tables. You may recall that we are able to read these arrays, display them and extract point data from them. But we haven't used them *en mass* as a variable yet.
+Finally we come to the end product of forecasting: prediction. This last step is actually fairly simple, given a recipe and model (now bundled in a `workflow` container).  We have already made predictions using tables of input covariates, but we now want to predict across the entire domain of our Brickman data set.  This requires predicting with `stars` objects not tables. You may recall that we are able to read these arrays, display them and extract point data from them. But we haven't used them *en mass* as a variable yet.
 
 # Setup
 
@@ -17,10 +17,10 @@ source("setup.R")
 
 # Load the Brickman data
 
-Once again, we'll use the August data where we started with a greedy sampling approach. We are going to make a prediction about the present, which means it something akin to a [nowcast](https://en.wikipedia.org/wiki/Nowcasting_(economics)). 
+Once again, we'll use the August data. We are going to make a prediction about the present, which means it something akin to a [nowcast](https://en.wikipedia.org/wiki/Nowcasting_(economics)). 
 
 ```{r load_covar}
-cfg = read_configuration(version = "g_Aug")
+cfg = read_configuration(version = "Aug", path = data_path("models"))
 db = brickman_database()
 covars = read_brickman(db |> filter(scenario == "PRESENT", interval == "mon")) |>
   select(all_of(cfg$keep_vars)) |>
@@ -32,7 +32,7 @@ covars = read_brickman(db |> filter(scenario == "PRESENT", interval == "mon")) |
 We read the recipe and model workflow bundle.
 
 ```{r load_workflow}
-wflow = read_workflow(version = cfg$version)
+wflow = read_workflow(version = cfg$version, type = "rand_forest")
 ```
 
 Recall that the workflow is a container that has has two elements: pre-processing recipe and model.  When we make a prediction with the workflow it will accept new data that then gets filtered and/or transformed as specified by the recipe steps. The data that survives the preprocessing will then be used to feed into the model that was trained on a specific domain (time and space).
@@ -72,7 +72,9 @@ plot(coast, col = "black", lwd = 2, add = TRUE)
 Now let's try our hand at forecasting - let's try RCP85 in 2075.  First we load those parameters, then run the prediction and plot.
 
 ```{r load_2075_RCP85}
-covars_rcp85_2075 = read_brickman(db |> filter(scenario == "RCP85", year == 2075, interval == "mon")) |>
+covars_rcp85_2075 = read_brickman(db |> filter(scenario == "RCP85", 
+                                               year == 2075, 
+                                               interval == "mon")) |>
   select(all_of(cfg$keep_vars)) |>
   slice("month", "Aug") 
 ```
@@ -108,7 +110,9 @@ forecast_2055
 We want to bind the `.pred_presence` attribute for each of the predictions (nowcast, forecast_2055 and forecast_2075).  Let's assume the "present" mean 2020 so we can assign a year.
 
 ```{r bind}
-rcp85 = c(nowcast, forecast_2055, forecast_2075, along = list(year = c("2020", "2055", "2075")))
+rcp85 = c(nowcast, 
+          forecast_2055, forecast_2075, 
+          along = list(year = c("2020", "2055", "2075")))
 ```
 :::{.callout-note}
 Curious about why we provide year as a vector of characters instead of a vector of integers?  Try running the command above again but this time using `along = list(year = c(2020, 2055, 2075))` (as numbers not strings). Then check out the 3rd dimension.
@@ -145,12 +149,12 @@ path = data_path("predictions")
 if (!dir.exists(path)) ok = dir.create(path, recursive = TRUE)
 
 # write individual arrays?
-write_prediction(nowcast, file = file.path(path,"g_Aug_RCP85_2020.tif"))
-write_prediction(forecast_2055, file = file.path(path, "g_Aug_RCP85_2055.tif"))
-write_prediction(forecast_2075, file = file.path(path, "g_Aug_RCP85_2075.tif"))
+write_prediction(nowcast, file = file.path(path,"Aug-rand_forest-RCP85-2020.tif"))
+write_prediction(forecast_2055, file = file.path(path, "Aug-rand_forest-RCP85-2055.tif"))
+write_prediction(forecast_2075, file = file.path(path, "Aug-rand_forest-RCP85-2075.tif"))
 
 # or write them together in a "multi-layer" file?
-write_prediction(rcp85, file = file.path(path, "g_Aug_RCP85_all.tif"))
+write_prediction(rcp85, file = file.path(path, "Aug-rand_forest-RCP85-all.tif"))
 ```
 
 To read it back simply provide the filename to `read_prediction()`.  If you are reading back a multi-layer array, be sure to check out the `time` argument to assign values to the time dimension.  Single layer arrays don't have the concept of time so the `time` argument is ignored.
@@ -161,4 +165,4 @@ We made both a nowcast and a number predictions using a previously saved workflo
 
 # Coding Assignment
 
-For each each climate scenario create a monthly forecast (so that's three: nowcast, forecast_2055 and forecast_2075) and save each to in your `predictions` directory.  Whether you choose to draw upon the greedy background sampling method, the conservative background sampling method or both is up to you. Keep in mind that some months may not have enough data to model without throwing an error.  We suggest that you wrap your critical steps in a `try()` function which will catch the error without crashing your iterator. There is a tutorial on [error catching](https://bigelowlab.github.io/handytandy/try.html) that specifically uses `try()`.
+For each each climate scenario create a monthly forecast (so that's three: nowcast, forecast_2055 and forecast_2075) and save each to in your `predictions` directory. Keep in mind that some months may not have enough data to model without throwing an error.  We suggest that you wrap your critical steps in a `try()` function which will catch the error without crashing your iterator. There is a tutorial on [error catching](https://bigelowlab.github.io/handytandy/try.html) that specifically uses `try()`.
