--- a/C01_observations.qmd
+++ b/C01_observations.qmd
@@ -25,7 +25,6 @@ As always, we start by running our setup function. Start RStudio/R, and relaod y
 
 ```{r source_setup, warning = FALSE}
 source("setup.R")
-SPECIES = "Mola mola"
 ```
 
 # Observations
@@ -33,7 +32,7 @@ SPECIES = "Mola mola"
 Next is to read in the observations you have already downloaded for that species.
 
 ```{r read_obs}
-obs = read_obis(SPECIES)
+obs = read_observations()
 obs
 ```
 
